<resources>
    <string name="app_name">Blocky 4</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="wait">Wait</string>
    <string name="heal">Heal</string>
    <string name="attack">Attack</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
</resources>
