<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context=".MainActivity"
    android:background="#ffffff">

    <com.example.som.blocky4.MySurfaceView
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/WHITE"
        android:layout_toEndOf="@+id/Vertical"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/Vertical" />

    <LinearLayout
        android:id="@+id/Vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <Button
        android:id="@+id/btnUp"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/WHITE"
        android:layout_marginBottom="10dp"
        android:text="@string/up" />

    <Button
        android:id="@+id/btnDown"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/WHITE"
        android:layout_marginBottom="10dp"
        android:text="@string/down" />

    <Button
        android:id="@+id/btnLeft"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="bottom"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/WHITE"
        android:layout_marginBottom="10dp"
        android:text="@string/left" />

    <Button
        android:id="@+id/btnRight"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/WHITE"
        android:layout_marginBottom="10dp"
        android:text="@string/right" />

    <Button
        android:id="@+id/btnAttack"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/WHITE"
        android:layout_marginBottom="10dp"
        android:text="@string/attack" />

    <Button
        android:id="@+id/btnHeal"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/WHITE"
        android:layout_marginBottom="10dp"
        android:text="@string/heal" />

    <Button
        android:id="@+id/btnWait"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/WHITE"
        android:layout_marginBottom="10dp"
        android:text="@string/wait" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/WHITE"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="75dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/WHITE"
        android:layout_marginTop="10dp"
        android:text="@string/start" />
    ></LinearLayout>
</RelativeLayout>